--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,4 @@ _psql
 *.log
 # NEVER COMMIT SECRETS TO YOUR REPO!
 # Uncomment this next line after cloning and remove .env from the repo after cloning
-# *.env
+*.env
