--- a/Pipfile
+++ b/Pipfile
@@ -6,7 +6,7 @@ name = "pypi"
 [packages]
 Django = "*"
 gunicorn = "*"
-psycopg2 = "*"
+psycopg2-binary = "*"
 redis = "*"
 hiredis = "*"
 
@@ -17,7 +17,7 @@ flake8 = "*"
 flake8-quotes = "*"
 
 [requires]
-python_version = "3.10"
+python_version = "3.8.10"
 
 [pipenv]
 allow_prereleases = true
